2007-11-18  Edward Hervey  <bilboed@bilboed.com>

	* configure.ac:
	Back to development cycle.

=== release 0.11.1 ===

2007-11-18  Edward Hervey  <bilboed@bilboed.com>

	* NEWS:
	* RELEASE:
	* configure.ac:
	Releasing 0.11.1 "A gentlemen game played by hooligans"

2007-11-18  Edward Hervey  <bilboed@bilboed.com>

	* pitivi/pitivi.py:
	Added new 'project-closed' signal to confirm that a project is closed.
	* pitivi/timeline/composition.py:
	Update condensed-list once everything is added to the timeline
	* pitivi/ui/timelineobjects.py:
	Add a bit more logic for when a project is loaded/closed
	* tests/test_file_load_save.py:
	Added tests for new 'project-closed' signal

2007-11-18  Edward Hervey  <bilboed@bilboed.com>

	* pitivi/ui/mainwindow.py:
	Use portable 'if' syntax

2007-11-18  Edward Hervey  <bilboed@bilboed.com>

	* pitivi/ui/sourcefactories.py:
	Fixes to display factories when a new project is loaded.
	Re-factored code a bit to avoid duplicates.

2007-11-18  Edward Hervey  <bilboed@bilboed.com>

	* pitivi/pitivi.py:
	The uri is a keyword argument to Project()
	* pitivi/project.py:
	Serializable sub-classes need to have keyword-only arguments.
	Activate proper save
	Small code re-organization
	* pitivi/projectsaver.py:
	Add debugging
	whitespace-fixes
	* pitivi/ui/mainwindow.py:
	methods renaming
	added debugging
	whitespace-fixes

2007-11-18  Edward Hervey  <bilboed@bilboed.com>

	* pitivi/objectfactory.py:
	* pitivi/serializable.py:
	* pitivi/settings.py:
	* pitivi/sourcelist.py:
	Classes implementing Serializable need to have keyword-only arguments
	Store some more info for factories
	Misc fixes
	* pitivi/timeline/composition.py:
	defaultSource should be a TimelineFileSource and not a pure gnlobject
	De-serialize all contents before adding them to the composition.
	* pitivi/timeline/objects.py:
	change naming of serializable attributes.
	* pitivi/timeline/source.py:
	Small fixes
	* pitivi/timeline/timeline.py: